--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "prepublish": "npm run build",
+    "prepare": "npm run build",
     "pretest": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
     "build": "gulp",
     "dev": "gulp dev",
